# Snake

./: Board.cpp  Board.h  CMakeLists.txt  Controller.cpp  Controller.h  GameLogic.cpp  GameLogic.h  Highscore.cpp  Highscore.h  Logic.cpp  Logic.h  Manager.cpp  Manager.h  Menu.cpp  Menu.h  PostGame.cpp  PostGame.h  README.md  SFMLController.cpp  SFMLController.h  SFMLView.cpp  SFMLView.h  Stats.cpp  Stats.h  TextView.cpp  TextView.h  Tools.cpp  Tools.h  main.cpp
highscore/: scores.txt
